feat: Navbar and basic hero image design

--- a/index.html
+++ b/index.html
@@ -1,14 +1,70 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Cars Down Under</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <!-- <meta charset='utf-8'> -->
+    <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
+    <title>Aussie Cars</title>
+    <!-- <meta name='viewport' content='width=device-width, initial-scale=1'> -->
+    <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
 </head>
+
 <body>
-    
+  <nav class="navbar">
+    <div class="logo">
+        <a href="#"><img src="images/logo.png" alt="Logo"></a>
+    </div>
+    <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+    <ul class="nav-right">
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Sign Up</a></li>
+    </ul>
+</nav>
+
+    <div class="hero-image">
+        <div class="hero-text">
+          <h1>Aussie Cars</h1>
+          <p>Find cars in Australia</p>
+          <button>Search Cars</button>
+        </div>
+      </div>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
+      </p>
+
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
+      </p>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
+      </p>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
+      </p>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
+      </p>`
+
 </body>
+
 </html>
