--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <ul class="nav-links">
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
@@ -28,42 +28,54 @@
 
     <div class="hero-image">
         <div class="hero-text">
-          <h1>Aussie Cars</h1>
+          <h1>Auzzie Cars</h1>
           <p>Find cars in Australia</p>
           <button>Search Cars</button>
         </div>
       </div>
 
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
-      </p>
+      <div class="container">
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
+        </p>
+  
+  
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
+        </p>
+  
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
+        </p>
+  
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
+        </p>
+  
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
+        </p>`
+
+      </div>
+
+   
 
 
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
-      </p>`
+      <footer>
+        <p>&copy 2024 Auzzie Car Sales<br>
+        <a href="mailto:info@auzziecarsales.com.au">cbpmgr@gmail.com</a></p>
+      </footer>
 
 </body>
 
