--- a/about.html
+++ b/about.html
@@ -17,7 +17,8 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="#">Buy</a></li>
+            <li><a href="#">Sell</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
         <ul class="nav-right">
@@ -113,8 +114,8 @@
     <br>
     <br>
     <footer>
-        <p>&copy 2024 Auzzie Car Sales<br>
-            <a href="mailto:info@auzziecarsales.com.au">cbpmgr@gmail.com</a>
+        <p>&copy 2024 Aussie Car Sales<br>
+            <a href="mailto:info@aussiecarsales.com.au">info@aussiecarsales.com.au</a>
         </p>
     </footer>
 </body>
