--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <ul class="nav-links">
         <li><a href="#">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#">Services</a></li>
+        <li><a href="#">Buy</a></li>
+        <li><a href="#">Sell</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
     <ul class="nav-right">
@@ -28,8 +29,8 @@
 
     <div class="hero-image">
         <div class="hero-text">
-          <h1>Auzzie Cars</h1>
-          <p>Find cars in Australia</p>
+          <h1>Aussie Car Sales</h1>
+          <p>Buy Cars in Australia</p>
           <button>Search Cars</button>
         </div>
       </div>
@@ -65,7 +66,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
-        </p>`
+        </p>
 
       </div>
 
@@ -73,8 +74,8 @@
 
 
       <footer>
-        <p>&copy 2024 Auzzie Car Sales<br>
-        <a href="mailto:info@auzziecarsales.com.au">cbpmgr@gmail.com</a></p>
+        <p>&copy 2024 Aussie Car Sales<br>
+        <a href="mailto:info@aussiecarsales.com.au">info@aussiecarsales.com.au</a></p>
       </footer>
 
 </body>
