feat: Basic buy page and links from other pages

--- a/index.html
+++ b/index.html
@@ -1,83 +1,109 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <!-- <meta charset='utf-8'> -->
     <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
     <title>Aussie Cars</title>
     <!-- <meta name='viewport' content='width=device-width, initial-scale=1'> -->
-    <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
-</head>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+  </head>
 
-<body>
-  <nav class="navbar">
-    <div class="logo">
-        <a href="#"><img src="images/logo.png" alt="Logo"></a>
-    </div>
-    <ul class="nav-links">
+  <body>
+    <nav class="navbar">
+      <div class="logo">
+        <a href="#"><img src="images/logo.png" alt="Logo" /></a>
+      </div>
+      <ul class="nav-links">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Buy</a></li>
+        <li><a href="buy.html">Buy</a></li>
         <li><a href="#">Sell</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="#">Contact</a></li>
-    </ul>
-    <ul class="nav-right">
+      </ul>
+      <ul class="nav-right">
         <li><a href="#">Login</a></li>
         <li><a href="#">Sign Up</a></li>
-    </ul>
-</nav>
+      </ul>
+    </nav>
 
     <div class="hero-image">
-        <div class="hero-text">
-          <h1>Aussie Car Sales</h1>
-          <p>Buy Cars in Australia</p>
-          <button>Search Cars</button>
-        </div>
+      <div class="hero-text">
+        <h1>Aussie Car Sales</h1>
+        <p>Buy Cars in Australia</p>
+        <a class="btn" href="buy.html">Search Cars</a>
       </div>
+    </div>
 
-      <div class="container">
+    <div class="container">
+      <h3 id="homepage-mission-statement">
+        Aussie Car Sales aims to be your <span style="text-decoration: underline;">one stop solution</span> for buying and
+        selling cars in Australia
+      </h3>
 
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
-        </p>
-  
-  
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
-        </p>
-  
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
-        </p>
-  
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
-        </p>
-  
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui exercitationem sequi repellendus repudiandae omnis impedit architecto quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque accusamus!
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo accusantium necessitatibus reiciendis!
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa modi temporibus explicabo, dolorum quasi maiores non incidunt praesentium fuga quisquam similique ullam eum laborum ex pariatur necessitatibus.
-        </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui
+        exercitationem sequi repellendus repudiandae omnis impedit architecto
+        quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque
+        accusamus! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste
+        corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo
+        accusantium necessitatibus reiciendis! Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa
+        modi temporibus explicabo, dolorum quasi maiores non incidunt
+        praesentium fuga quisquam similique ullam eum laborum ex pariatur
+        necessitatibus.
+      </p>
 
-      </div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui
+        exercitationem sequi repellendus repudiandae omnis impedit architecto
+        quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque
+        accusamus! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste
+        corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo
+        accusantium necessitatibus reiciendis! Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa
+        modi temporibus explicabo, dolorum quasi maiores non incidunt
+        praesentium fuga quisquam similique ullam eum laborum ex pariatur
+        necessitatibus.
+      </p>
 
-   
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui
+        exercitationem sequi repellendus repudiandae omnis impedit architecto
+        quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque
+        accusamus! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste
+        corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo
+        accusantium necessitatibus reiciendis! Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa
+        modi temporibus explicabo, dolorum quasi maiores non incidunt
+        praesentium fuga quisquam similique ullam eum laborum ex pariatur
+        necessitatibus.
+      </p>
 
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quam qui
+        exercitationem sequi repellendus repudiandae omnis impedit architecto
+        quisquam earum voluptates quasi quaerat. Ea sit optio ex culpa atque
+        accusamus! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Temporibus quas incidunt expedita eligendi a, impedit debitis natus iste
+        corrupti pariatur cumque, dolorum similique? Nam at corrupti nemo
+        accusantium necessitatibus reiciendis! Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Reprehenderit delectus, assumenda culpa
+        modi temporibus explicabo, dolorum quasi maiores non incidunt
+        praesentium fuga quisquam similique ullam eum laborum ex pariatur
+        necessitatibus.
+      </p>
+    </div>
 
-      <footer>
-        <p>&copy 2024 Aussie Car Sales<br>
-        <a href="mailto:info@aussiecarsales.com.au">info@aussiecarsales.com.au</a></p>
-      </footer>
-
-</body>
-
+    <footer>
+      <p>
+        &copy 2024 Aussie Car Sales<br />
+        <a href="mailto:info@aussiecarsales.com.au"
+          >info@aussiecarsales.com.au</a
+        >
+      </p>
+    </footer>
+  </body>
 </html>
