--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Buy</a></li>
+            <li><a href="buy.html">Buy</a></li>
             <li><a href="#">Sell</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
