fix: Responsive row and columns system for about page

--- a/about.html
+++ b/about.html
@@ -1,123 +1,109 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>About</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+  </head>
 
-<body>
+  <body>
     <nav class="navbar">
-        <div class="logo">
-            <a href="#"><img src="images/logo.png" alt="Logo"></a>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="buy.html">Buy</a></li>
-            <li><a href="#">Sell</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-        <ul class="nav-right">
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Sign Up</a></li>
-        </ul>
+      <div class="logo">
+        <a href="#"><img src="images/logo.png" alt="Logo" /></a>
+      </div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="buy.html">Buy</a></li>
+        <li><a href="#">Sell</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <ul class="nav-right">
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Sign Up</a></li>
+      </ul>
     </nav>
 
     <div class="container">
+      <h1 class="gradient-heading" style="position: relative">
+        Auzzie Car Sales
+      </h1>
 
-        <h1 class="gradient-heading" style="position: relative;">
-            Auzzie Car Sales
-        </h1>
+      <p>
+        Welcome to Auzzie Car Sales, founded in 2024 by a group of young
+        entrepreneurs who share the same passion for cars as you do.
+        <br />
+        We may be young, but we have plenty of experience selling cars. We aim
+        to be the top car sales company in Australia within the next 5 years.
 
-        <p>
-            Welcome to Auzzie Car Sales, founded in 2024 by a group of young entrepreneurs who share the same passion
-            for cars as you do.
-            <br>
-            We may be young, but we have plenty of experience selling cars. We aim to be the top car sales company in
-            Australia within the next 5 years.
+        <br />
+        At Auzzie Car Sales, we are driven to provide a top notch car buying and
+        selling experience. We want to take the hassle out of your car buying
+        and selling, so you could focus more on enjoying the ride.
 
-            <br>
-            At Auzzie Car Sales, we are driven to provide a top notch car buying and selling experience.
-            We want to take the hassle out of your car buying and selling, so you could focus more on enjoying the ride.
+        <br />
+      </p>
 
-            <br>
+      <p>
+        We are constantly <strong>innovating</strong> new ways to make car
+        buying and selling as easy as possible. Our engineering, product
+        research and design teams all work together to come up with better ideas
+        to do things around just so that the process is a little easier for you.
+      </p>
 
-        <p>
-            We are constantly <strong>innovating</strong> new ways to make car buying and selling as easy as possible.
-            Our engineering, product research and design teams all work together to come up with better ideas to do
-            things around just so that the process is a little easier for you.
-        </p>
+      <h2 class="gradient-heading">Our Services</h2>
 
+      <p>
+        We currently source vehicles on our own and also have a marketplace for
+        users to be able to signup and create listing of your own. We do not
+        charge a single dollar t`o our customers who want to sell and we wont
+        ever. This is our promise to our customers. As of today, we offer the
+        following services and we strive to add more in the future. 🚀
+      </p>
 
-        <h2 class="gradient-heading">
-            Our Services
-        </h2>
-
-        <p>
-            We currently source vehicles on our own and also have a marketplace for users to be able to signup and
-            create listing of your own.
-            We do not charge a single dollar t`o our customers who want to sell and we wont ever. This is our promise to
-            our customers.
-            As of today, we offer the following services and we strive to add more in the future. 🚀
-        </p>
-
-        <div class="service-card">
-            <div class="service-card-content">
-                <h3>Buy Car</h3>
-                <p>
-                    You can browse from, filter and buy from our catalog of over 20,000 cars.
-                </p>
-                <ul>
-                    <li>
-                        Over 20,000 cars in catalog. 🚘🚖
-                    </li>
-                    <li>
-                        Narrow down search using our easy to use filters. 😌
-                    </li>
-                    <li>
-                        Easy registration and onboarding. 😎
-                    </li>
-                </ul>
-                <a href="`" class="btn" target="_blank">Learn more</a>
-            </div>
+      <div class="row">
+        <div class="col-6">
+          <div class="service-card">
+            <h3>Buy Car</h3>
+            <p>
+              You can browse from, filter and buy from our catalog of over
+              20,000 cars.
+            </p>
+            <ul>
+              <li>Over 20,000 cars in catalog. 🚘🚖</li>
+              <li>Find cars using our easy to use filters. 😌</li>
+              <li>Easy registration and onboarding. 😎</li>
+            </ul>
+            <a href="buy.html" class="btn" target="_self">Learn more</a>
+          </div>
         </div>
 
-        <br>
-        <div class="service-card">
-            <div class="service-card-content">
-                <h3>Sell Car</h3>
-                <p>
-                    You can browse from, filter and buy from our catalog of over 20,000 cars.
-                </p>
-                <ul>
-                    <li>
-                        Get best value for your car. 💵
-                    </li>
-                    <li>
-                        List your car for free if you are not a company. 😌
-                    </li>
-                    <li>
-                        We manage all the paperworks. 🧘
-                    </li>
-                </ul>
-                <a href="" class="btn" target="_blank">Learn more</a>
-            </div>
+        <div class="col-6">
+          <div class="service-card">
+            <h3>Sell Car</h3>
+            <p>
+              You can browse from, filter and buy from our catalog of over
+              20,000 cars.
+            </p>
+            <ul>
+              <li>Get best value for your car. 💵</li>
+              <li>List cars for free if youre not a company. 😌</li>
+              <li>We manage all the paperworks. 🧘</li>
+            </ul>
+            <a href="sell.html" class="btn" target="_self">Learn more</a>
+          </div>
         </div>
-
+      </div>
     </div>
-
-
-    <br>
-    <br>
     <footer>
-        <p>&copy 2024 Aussie Car Sales<br>
-            <a href="mailto:info@aussiecarsales.com.au">info@aussiecarsales.com.au</a>
-        </p>
+      <p>
+        &copy 2024 Aussie Car Sales<br />
+        <a href="mailto:info@aussiecarsales.com.au"
+          >info@aussiecarsales.com.au</a
+        >
+      </p>
     </footer>
-</body>
-
+  </body>
 </html>
