fix: Spelling for aussie inline with new branding

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
     <div class="container">
       <h1 class="gradient-heading" style="position: relative">
-        Auzzie Car Sales
+        Auss`ie Car Sales
       </h1>
 
       <p>
