--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
     <div class="container">
       <h1 class="gradient-heading" style="position: relative">
-        Auss`ie Car Sales
+        Aussie Car Sales
       </h1>
 
       <p>
