--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ul>
     <ul class="nav-right">
       <li><a href="#">Login</a></li>
-      <li><a href="#">Sign Up</a></li>
+      <li><a href="signup.html">Sign Up</a></li>
     </ul>
   </nav>
 
