--- a/buy.html
+++ b/buy.html
@@ -22,7 +22,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
     <ul class="nav-right">
-      <li><a href="#">Login</a></li>
+      <li><a href="login.html">Login</a></li>
       <li><a href="signup.html">Sign Up</a></li>
     </ul>
   </nav>
