--- a/signup.html
+++ b/signup.html
@@ -22,18 +22,15 @@
             <li><a href="#">Contact</a></li>
         </ul>
         <ul class="nav-right">
-            <li><a href="#">Login</a></li>
+            <li><a href="login.html">Login</a></li>
             <li><a href="signup.html">Sign Up</a></li>
         </ul>
     </nav>
 
     <div class="container">
 
-        <p>
+        <form name="registrationForm" onsubmit="return validateSignupFields()" id="signup-form">
             Fill up the form to register an account on Car Sales Australia and enjoy buying and listing cars for free.
-        </p>
-
-        <form name="registrationForm" onsubmit="return validateSignupFields()">
 
             <div class="row">
                 <div class="col-30">
