fix: Phone number input type in registration page

--- a/signup.html
+++ b/signup.html
@@ -52,10 +52,10 @@
 
             <div class="row">
                 <div class="col-30">
-                    <label for="pnumber">Phone Number</label>
+                    <label for="phone">Phone Number</label>
                 </div>
                 <div class="col-70">
-                    <input type="text" id="pnumber" name="pnumber" placeholder="Phone Number">
+                    <input type="tel" id="phone" name="phone" placeholder="+61 XXX XXX XXX">
                 </div>
             </div>
 
@@ -89,7 +89,7 @@
             <br>
 
             <div class="row">
-                <p>By clciking Register, you understand and agree to the <a href="#">terms and conditions</a> of Car Sales Australia</p>
+                <p>By clciking Register, you understand and agree to the <a href="#">terms and conditions</a> of Car Sales Australia.</p>
                 <input type="submit" value="Register" class="btn">
             </div>
 
