feat: Add location for car search page

--- a/buy.html
+++ b/buy.html
@@ -32,8 +32,18 @@
       Search from a catalog of over 20,000 cars in Australia
     </h2>
 
-    <form>
-      <input type="text" name="search" placeholder="Search..">
+    <form>`
+      <div class="row">
+      
+        <div class="col-70" style="padding-right: 48px;">
+            <input type="text" id="searchKeyword" name="searchKeyword" placeholder="Search Keyword">
+        </div>
+
+        <div class="col-30">
+          <input type="text" id="location" name="location" placeholder="Location">
+      </div>
+    </div>
+
     </form>
 
     <br>
