feat: Add team members on about page

--- a/about.html
+++ b/about.html
@@ -98,6 +98,54 @@
       </div>
     </div>
 
+    <div class="row">
+      <h2 class="gradient-heading">Team behind Aussie Car Sales</h2>
+      <div class="col-4">
+        <div class="service-card">
+          <img src="images/john.jpeg" />
+          <h3>John Doe</h3>
+          <p>
+            Founder and Managing Director
+          </p>
+          <ul>
+            <li><a href="https://ravipun.com.np">Website</a></li>
+            <li><a href="https://linkedin.com/in/r1249">LinkedIn</a></li>
+            <li><a href="https://twitter.com/ravigarbuja">Twitter</a></li>
+          </ul>
+
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="service-card">
+          <img src="images/john.jpeg" />
+          <h3>Alice Cooper</h3>
+          <p>
+            CTO
+          </p>
+          <ul>
+            <li><a href="https://ravipun.com.np">Website</a></li>
+            <li><a href="https://linkedin.com/in/r1249">LinkedIn</a></li>
+            <li><a href="https://twitter.com/ravigarbuja">Twitter</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="service-card">
+          <img src="images/john.jpeg" />
+          <h3>Bob Cowell</h3>
+          <p>
+            Sales & Marketing Head
+          </p>
+          <ul>
+            <li><a href="https://ravipun.com.np">Website</a></li>`
+            <li><a href="https://linkedin.com/in/r1249">LinkedIn</a></li>
+            <li><a href="https://twitter.com/ravigarbuja">Twitter</a></li>
+          </ul>
+
+        </div>
+      </div>
+    </div>
+
     <h2 class="gradient-heading">Contact us</h2>
     <div class="row">
       <div class="col-12">
